--- a/SC.WebSite/SC.WebSite/Web.config
+++ b/SC.WebSite/SC.WebSite/Web.config
@@ -12,7 +12,7 @@
     <add key="Lucene.Net.FSDirectory.class" value="Sitecore.Search.FSDirectory, Sitecore.Kernel"/>
   </appSettings>
   <sitecore database="SqlServer">
-    <sc.variable name="dataFolder" value="E:\SiteCore-CMS\SitecoreLP\Data\"/>
+    <sc.variable name="dataFolder" value="E:\SiteCore-CMS\SCWeb\Data\"/>
     <sc.variable name="mediaFolder" value="/upload"/>
     <sc.variable name="tempFolder" value="/temp"/>
     <prototypes>
@@ -1767,6 +1767,9 @@
       <site name="modules_shell" virtualFolder="/sitecore modules/shell" physicalFolder="/sitecore modules/shell" rootPath="/sitecore/content" startItem="/home" language="en" database="core" domain="sitecore" content="master" enableAnalytics="false" enableWorkflow="true"/>
       <site name="modules_website" virtualFolder="/sitecore modules/web" physicalFolder="/sitecore modules/web" rootPath="/sitecore/content" startItem="/home" language="en" database="web" domain="extranet" allowDebug="true" cacheHtml="true"/>
       <site name="website" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content" startItem="/home" database="web" domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="10MB" registryCacheSize="0" viewStateCacheSize="0" xslCacheSize="5MB" filteredItemsCacheSize="2MB" enablePreview="true" enableWebEdit="true" enableDebugger="true" disableClientData="false"/>
+      <site name="global" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content/Home" hostName="www.scweb.com" startItem="/Global" database="web" domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="10MB" registryCacheSize="0" viewStateCacheSize="0" xslCacheSize="5MB" filteredItemsCacheSize="2MB" enablePreview="true" enableWebEdit="true" enableDebugger="true" disableClientData="false"/>
+      <site name="london" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content/Home" hostName="www.scweb.com" startItem="/UK" database="web" domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="10MB" registryCacheSize="0" viewStateCacheSize="0" xslCacheSize="5MB" filteredItemsCacheSize="2MB" enablePreview="true" enableWebEdit="true" enableDebugger="true" disableClientData="false"/>
+      <site name="beijing" virtualFolder="/" physicalFolder="/" rootPath="/sitecore/content/Home/APAC" hostName="www.scweb.com" startItem="/BeiJing" database="web" domain="extranet" allowDebug="true" cacheHtml="true" htmlCacheSize="10MB" registryCacheSize="0" viewStateCacheSize="0" xslCacheSize="5MB" filteredItemsCacheSize="2MB" enablePreview="true" enableWebEdit="true" enableDebugger="true" disableClientData="false"/>
       <site name="scheduler" enableAnalytics="false" domain="sitecore"/>
       <site name="system" enableAnalytics="false" domain="sitecore"/>
       <site name="publisher" domain="sitecore" enableAnalytics="false" enableWorkflow="true"/>
