--- a/SC.WebSite/SC.WebSite/SC.WebSite.csproj
+++ b/SC.WebSite/SC.WebSite/SC.WebSite.csproj
@@ -59,6 +59,9 @@
     <Content Include="Layouts\Common\UC_Head.ascx" />
     <Content Include="Layouts\Common\UC_JS.ascx" />
     <Content Include="Layouts\Global.aspx" />
+    <Content Include="Layouts\JoinUs\ApplyForPosition.ascx" />
+    <Content Include="Layouts\JoinUs\JoinUs.ascx" />
+    <Content Include="Layouts\JoinUs\OurValues.ascx" />
     <Content Include="Layouts\Work\List.ascx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -104,6 +107,27 @@
     </Compile>
     <Compile Include="Layouts\Global.aspx.designer.cs">
       <DependentUpon>Global.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\ApplyForPosition.ascx.cs">
+      <DependentUpon>ApplyForPosition.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\ApplyForPosition.ascx.designer.cs">
+      <DependentUpon>ApplyForPosition.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\JoinUs.ascx.cs">
+      <DependentUpon>JoinUs.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\JoinUs.ascx.designer.cs">
+      <DependentUpon>JoinUs.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\OurValues.ascx.cs">
+      <DependentUpon>OurValues.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Layouts\JoinUs\OurValues.ascx.designer.cs">
+      <DependentUpon>OurValues.ascx</DependentUpon>
     </Compile>
     <Compile Include="Layouts\Work\List.ascx.cs">
       <DependentUpon>List.ascx</DependentUpon>
